
[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude = [
    "dist",
    "build",
    "assets",
    "credits",
    "saves",
    "resources",
    "build.rs",
]

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[profile]
dev = {package."*" = {opt-level = 1}, opt-level = 1}
release = {lto = true, codegen-units = 1,opt-level = 3}
# The profile that 'cargo dist' will build with
dist = {inherits = "release", lto = "thin"}

# # Enable a small amount of optimization in debug mode
# [profile.release]
# opt-level = 3
[dependencies]
rust_utils = {path = "../rust_utils"}
# bevy_utils = {path = "../bevy_utils"}
aery = "0.5"
bevy_third_person_camera = "*"
rand = "*"
bevy_sprite3d = "*"
bevy_rapier3d = {version = "0.23.0", features = ["wasm-bindgen"]}
bevy = { version = "*", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "ktx2",
    "zstd",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
iter-comprehensions = "*"
bevy-tnua-rapier3d = "*"
bevy-tnua = "*"
bevy_vox = "0.8.1"
