# [build]
# target = "wasm32-unknown-unknown"
# target = "x86_64-unknown-linux-gnu"
# cargo-features = ["per-package-target"]
[package]
# default-target = "wasm32-unknown-unknown"
# default-target = "x86_64-unknown-linux-gnu"

name = "bevy_game"
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude = [
    "dist",
    "build",
    "assets",
    "credits",
    "saves",
    "resources",
    "build.rs",
]

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[profile]
dev = {package."*" = {opt-level = 3}, opt-level = 1}
release = {lto = "fat", codegen-units = 1, opt-level = 3}
# wasm-release = {inherits = "release", lto = true, codegen-units = 1,opt-level = 3}
# The profile that 'cargo dist' will build with
dist = {inherits = "release", lto = "fat"}


# # Enable a small amount of optimization in debug mode
# [profile.release]
# opt-level = 3
[dependencies]
rust_utils = {path = "../rust_utils"}
# bevy_utils = {path = "../bevy_utils"}
# aery = "0.5"

# bevy_third_person_camera = {version = "0.1.8"}
rand = "*"
# bevy_sprite3d = "*"
bevy_rapier3d = {version = "0.26.0", features = ["wasm-bindgen"]}
bevy = { version = "0.13.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "ktx2",
    "zstd",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    # "wayland",
] }
# wayland-client = "0.31.3"
bevy_third_person_camera = "0.1.9"
iter-comprehensions = "*"
# bevy-tnua-rapier3d = "*"
# bevy-tnua = "*"
# bevy_vox = "0.8.1"
# bevy_obj = { version = "0.12", features = ["scene"] }
bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", rev = "1fabd2214731dedb4b17ce0a0894d22182707759" }

bevy_vox_scene ={git = "https://github.com/Utsira/bevy_vox_scene", rev = "01606eb983ea8e7d039323fd3900f9d796993b8e"}
bevy_sprite3d = "2.8.0"

bevy_meshem ={git = "https://github.com/Adamkob12/bevy_meshem", rev = "37163302e9db919941478d0647803acf527d4dbf"}
num_enum = "0.7.2"
